fix for safari backface visibility

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -43,6 +43,9 @@ body {
 .front, 
 .back {
     box-sizing: border-box;
+    -webkit-perspective: 0;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translate3d(0,0,0);
 	backface-visibility: hidden;
 	transition: transform .8s ease;
     img {
@@ -141,4 +144,39 @@ body {
             0 0 1rem #FFF,
             0 0 2rem #F8A50E;
     }
+}
+
+.github-corner:hover .octo-arm {
+  animation: octocat-wave 560ms ease-in-out
+}
+
+.github-corner svg {
+  fill: gray;
+  color: #fff;
+}
+
+.github-corner:hover svg {
+  fill: #337ab7;
+}
+
+@keyframes octocat-wave {
+  0%, 100% {
+    transform: rotate(0deg)
+  }
+  20%, 60% {
+    transform: rotate(-25deg)
+  }
+  40%, 80% {
+    transform: rotate(10deg)
+  }
+}
+
+@media (max-width: 500px) {
+  .github-corner:hover .octo-arm {
+    animation: none
+  }
+
+  .github-corner .octo-arm {
+    animation: octocat-wave 560ms ease-in-out
+  }
 }
